Update on Overleaf.

--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -103,7 +103,7 @@ and the mapping indices used.
 }
 \begin{tabular}{lrrrrlc}
 \hline
-code & Number  & \multicolumn{3}{c}{Index}      & sector & SNAP \\ \cline{3-5}
+code & No  & \multicolumn{3}{c}{Index}      & sector & SNAP \\ \cline{3-5}
      &         & timefac  & height & emissplit  &        & equivalent \\
 \hline
 A &      01 &   1 &  1 &   1 &  Public Power  &  1 \\
@@ -230,7 +230,6 @@ be set to either `Total', or `NoFert'.
 \subsection{DMS emissions}
 \label{ssec:DMS}
 
-\COMMENT{Michael: can you convert equations to math style, and use equation environment to get numbering. Thanks.}
 
 A new option to calculate biogenic emissions of dimethyl sulphide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} and the meteorological data driving the EMEP model, and it has been used for this year's status run. 
 
