--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -105,7 +105,7 @@ of the LRTAP Convention. Also in the EMEP/EEA Guidebook \citep{EmisInvGuide2019}
 excluded in the emission factors. Various EMEP centres and task forces and other stakeholders jointly discuss the topic and work on progress in this area. An important activity in 2020 was the workshop organised by MSC-W that resulted in a workshop report \citep{CONDws2020}. However, at the moment PM emissions reported by Parties to the LRTAP Convention are not directly
 comparable, which has implications on the modeling of overall exposure to PM.
 
-Small scale combustion sources make a notable contribution to total PM emissions. For all Parties that reported PM$_{2.5}$ emissions for ''1A4bi Residential: Stationar'' for the year 2019 the average contribution to the national total PM$_{2.5}$ emissions from this source category was 46\%. Small-scale combustion is one of the sources where the inclusion of the condensable component has the largest impact on the emission factor. For example, for conventional woodstoves, one of the most important categories in Europe, the emission factors excluding and including the condensable fractions may differ by up to a factor of five \citep{DeniervanderGon2015}.
+Small scale combustion sources make a notable contribution to total PM emissions. For all Parties that reported PM$_{2.5}$ emissions for ''1A4bi Residential: Stationary'' for the year 2019 the average contribution to the national total PM$_{2.5}$ emissions from this source category was 46\%. Small-scale combustion is one of the sources where the inclusion of the condensable component has the largest impact on the emission factor. For example, for conventional woodstoves, one of the most important categories in Europe, the emission factors excluding and including the condensable fractions may differ by up to a factor of five \citep{DeniervanderGon2015}.
 To improve the quality of the input data for air quality models, and following a decision of \citet{EMEPBureaux2020}, the group of experts that met at the workshop organised by MSC-W agreed on the following approach (for more details see \citet{CONDws2020}): 
 
 \begin{itemize}
@@ -115,7 +115,7 @@ To improve the quality of the input data for air quality models, and following a
 
 CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C. The analysis focused on small scale combustion. This analysis was based on (a) the calculation of Implied Emission Factors (emission divided by the reported activity data), (b) the fuel mix of the Party, (c) the information provided in the Informative Inventory Report and (d) in a few cases direct information from Parties (received via e-mail).
 
-The analysis resulted in a list of Parties where the conclusion was that the PM emission data reported by the Party should be used as the condensable component seemed to be included. For other Parties the TNO REF2 data were used. In a few cases data that had been gap-filled by CEIP was used as for the respective Party no REF2 estimate was available (see table~\ref{tab:CEIP1}).
+The analysis resulted in a list of Parties where the conclusion was that the PM emission data reported by the Party should be used as the condensable component seemed to be included. For other Parties the TNO REF2 data were used. In a few cases data that had been gap-filled by CEIP was used for the respective Country as no REF2 estimate was available (see table~\ref{tab:CEIP1}).
 
 
 
@@ -129,26 +129,26 @@ The analysis resulted in a list of Parties where the conclusion was that the PM 
 Parties were asked to include a table with information on the inclusion of the condensable component in PM$_{10}$ and PM$_{2.5}$ emission factors for reporting under the CLRTAP Convention in 2021. This table has been added to the revised
 recommended structure for IIRs\footnote{\url{https://www.ceip.at/reporting-instructions } }. Twenty-three Parties provided information on the inclusion of the condensable component in PM$_{10}$ and PM$_{2.5}$ emission factors\footnote{Status as of 15 May 2021}. This reporting is a first step towards a better understanding of reported PM data. The information that Parties provided on whether the condensable component is included in PM emissions was quite heterogeneous. The status of inclusion or exclusion is best known for emissions from the energy sector and road transport, for which many Parties submitted information. 
 
-\subsection{REF2 emissions and improvements compared to last year}
+\subsection{REF2.1 emissions and improvements compared to last year's REF2 emissions}
 
 
 The REF2 emission inventory provides a bottom-up database of PM emissions (both PM$_{10}$ and PM$_{2.5}$) from small combustion activities (GNFR category C), taking into account activity data and consistent emission factors that include condensables, for both wood and solid fuel combustion. It was originally developed for the year 2010 \citep{DeniervanderGon2015}. Residential emissions vary from year to year, because of technological developments in the sector (replacement of stoves and boilers) but also because of the heating demand due to fluctuating temperatures. To take this into account, an alternative REF2 was developed for 2015 which was also used as an input to EMEP modelling in 2020. These REF2 emission data and their usage in the EMEP modelling work in 2020 are described in  \citet{R2020:CAMSREF2} and \citet{R2020:SVOC}. This version was developed by scaling the original REF2 for 2010 to the year 2015 by using the trend in the official reported data for PM$_{2.5}$ from GNFR~C for that particular year. The idea behind this approach was that by scaling in this way both the technological changes within each country as well as the annual fluctuation in heating demand are included. It is desirable but difficult to separate these effects because the detailed underlying country data are not available. Countries report emissions only by source sector and for the sum of all fuels; activity data or emissions by appliance type are not available.
 
 This scaled REF2 for the year 2015 has been used both in EMEP and other modelling activities, and presented in various international expert group meetings such as CAMS, EMEP and UNECE Task Forces (in particular TFEIP and TFMM). This triggered several discussions with experts (including some specific countries), which resulted in the provision of additional information of the national circumstances on the types of stoves installed, etc. (see also \cite{CONDws2020}). 
 
-With this information, as well as additional information made available by IIASA (Z. Klimont), for 5 specific countries (Austria, Germany, Finland, France, the Netherlands) the REF2 emission estimates were revised. The main reason to change the emission estimates is the new information that became available on the appliance types, especially regarding the split between different types of heating stoves (traditional vs. modern). For modern stoves, the PM emission factors are significantly lower compared to traditional stoves, and for the condensable component of PM this effect is even larger.
-The 5 selected countries were chosen because of feedback received or discussions with national experts which suggested that REF2 emissions may be overestimating. It is planned to also revisit the REF2 emission estimates for the other countries, but this is ongoing work.
+With this information, as well as additional information made available by IIASA (Z. Klimont), for 5 specific countries (Austria, Germany, Finland, France, the Netherlands) the REF2 emission estimates were revised. This revised emission inventory is referred to as REF2.1 in this report. The main reason to change the emission estimates is the new information that became available on the appliance types, especially regarding the split between different types of heating stoves (traditional vs. modern). For modern stoves, the PM emission factors are significantly lower compared to traditional stoves, and for the condensable component of PM this effect is even larger.
+The 5 selected countries were chosen because of feedback received or discussions with national experts which suggested that REF2 emissions may be overestimated. It is planned to also revisit the REF2.1 emission estimates for the other countries, but this is ongoing work.
 
 \begin{figure}[h]
 \centering
 {\includegraphics*[viewport=1 1 740 400,clip,scale=0.45]{FIGS_CEIP/Fig3.pdf}}
-\caption{Results for REF2 for 2010 (original), 2015 (after scaling, used in EMEP 2020) and 2015 (after scaling + adjustment for 5 countries, used in EMEP 2021).}
+\caption{Results for REF2 for 2010 (original), 2015 (after scaling, used in EMEP 2020) and REF2.1 for 2015 (after scaling + adjustment for 5 countries, used in EMEP 2021).}
 \label{fig:CEIP3}
 \end{figure}
 
 
-Figure~\ref{fig:CEIP3} shows the different REF2 emission estimates. The year 2010 is the original REF2 estimate, while 2015\_scaled represents the scaled REF2 (REF2.1) to the year 2015 using the official reported data (used in the 2020 EMEP modelling). The estimate 2015\_scaled\_adjusted is the updated version described here, where for 5 selected countries the REF2 data have been revised based on new information.
-From the figure, it can be seen that the 2015 emission is lower than 2010 for almost all countries. This is partly the result of technological advancements in countries (replacement of older stoves with new ones), but also largely related to the fact that 2010 was a relatively cold year in Europe, hence with higher emissions from the residential sector compared to other years. The figure also shows that for the five countries that have been adjusted in the latest update, in each case the REF2.1 emission including condensables is corrected downward. This adjusted REF2.1 is, however, still considerably higher than reported emission for each of these countries.
+Figure~\ref{fig:CEIP3} shows the different REF2 emission estimates. The year 2010 is the original REF2 estimate, while 2015\_scaled represents the scaled REF2 to the year 2015 using the official reported data (used in the 2020 EMEP modelling). The estimate 2015\_scaled\_adjusted is the updated version described here, where for 5 selected countries in the original REF2 data have been revised based on new information (REF2.1).
+From the figure, it can be seen that the 2015 emissions are lower than 2010 for almost all countries. This is partly the result of technological advancements in countries (replacement of older stoves with new ones), but also largely related to the fact that 2010 was a relatively cold year in Europe, hence with higher emissions from the residential sector compared to other years. The figure also shows that for the five countries that have been adjusted in the latest update, in each case the REF2.1 emission including condensables is corrected downward. This adjusted REF2.1 is, however, still considerably higher than reported emission for each of these countries.
 
 \section{Gothenburg Protocol targets}
 \label{sec:GP}
@@ -182,7 +182,7 @@ Approved adjustments are considered for  Denmark (NMVOCs, \nhiii), Finland (\nhi
 
 Under the Convention, CEIP is responsible for synthesizing the reported emissions data of the EMEP countries into complete gridded emissions datasets for the EMEP domain (covering the geographic area between 30\degrees N-82\degrees N latitude and 30\degrees W-90\degrees E longitude. These data are mainly used for modelling of air pollutant concentrations and depositions.
 
-To compile these datasets each year, CEIP synthesizes and evaluates the most recent national sectoral emissions estimates and national gridded emissions data reported by the EMEP countries. CEIP strives to include, to the largest possible extent, the reported emissions data it receives from EMEP countries. However, due to cases of non-reporting or identified quality issues in the reported data, emissions need to be gap-filled or replaced. Furthermore, it should be noted how gridded and sectoral emissions totals are combined in compiling these datasets. National gridded emissions data, even if reported annually, are not directly utilized but are rather used to map out relative emissions, with which national sector emission totals are spatially distributed. Of course if for a given year both national sector emissions totals and gridded estimates reported by a given country pass through the CEIP QA/QC checks, the generated gridded emissions will be identical to the gridded emissions reported by the country.
+To compile these datasets each year, CEIP synthesizes and evaluates the most recent national sectoral emissions estimates and national gridded emissions data reported by the EMEP countries. CEIP strives to include, to the largest possible extent, the reported emissions data it receives from EMEP countries. However, due to cases of non-reporting or identified quality issues in the reported data, emissions need to be gap-filled or replaced. Furthermore, it should be noted how gridded and sectoral emissions totals are combined in compiling these datasets. National gridded emissions data, even if reported annually, are not directly utilized but are rather used to map out relative emissions, with which national sector emission totals are spatially distributed. If for a given year both national sector emissions totals and gridded estimates reported by a given country pass through the CEIP QA/QC checks, the generated gridded emissions will be identical to the gridded emissions reported by the country.
 The following subchapters describe important aspects of the 2021 EMEP datasets, summarising:
 
 \begin{itemize}
@@ -207,7 +207,7 @@ The following subchapters describe important aspects of the 2021 EMEP datasets, 
 After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in the grid resolution of 0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude. As of June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution.
 
 
-The majority of gridded sectoral emissions in 0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution have been reported for the year 2015 (32 countries). For 2019 gridded sectoral emissions have been reported by 29 countries, for 2016, 2017 by five countries and for 2018 by four countries. Comparing to reporting in 2017, reported gridded data are available for 11 more countries in 2021.
+The majority of gridded sectoral emissions in 0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution have been reported for the year 2015 (32 countries). For 2019 gridded sectoral emissions have been reported by 29 countries, for 2016 and 2017 by five countries and for 2018 by four countries. In comparison to reporting in 2017, reported gridded data are available for 11 more countries in 2021.
 
 Fifteen countries reported gridded emissions additionally for previous years (one country for the whole time series from 1980 to 2019; one country for the whole time series from 1990 to 2019; seven countries for the years 1990, 1995, 2000, 2005 and 2010; one country for the years 1990, 2000, 2005 and 2010; one country for the years 2000, 2005 and 2010; one country for the year 2005; one country for the year 2010; and two countries for the year 2014).
 
@@ -234,11 +234,11 @@ For compiling the 2021 EMEP emisisons dataset, reported gridded data in 0.1{\deg
 \subsection{Gap-filling of reported data in 2021}
 \label{sec:gapfilling}
 
-As described above, sectoral emissions reported by the EMEP countries are used, to the largest extent possible, to compile the gridded EMEP datasets. Each year the reported source-sector level data of the (NFR level) are aggregated into the 13 GNFR sectors and are then evaluated to identify countries for which emissions have not been reported or appear to exhibit implausible emission levels and/or trends. Based on this assessment, a procedure is then implemented to gap-fill missing emissions data and to replace data that have been identified as implausible. The sectoral emissions are then distributed spatially using, where available (and appropriate), the reported national gridded emissions as relative spatial proxies, or other independent datasets of spatial proxies.
+As described above, sectoral emissions reported by the EMEP countries are used, to the largest extent possible, to compile the gridded EMEP datasets. Each year the reported source-sector level data (NFR level) are aggregated into the 13 GNFR sectors and are then evaluated to identify countries for which emissions have not been reported or appear to exhibit implausible emission levels and/or trends. Based on this assessment, a procedure is then implemented to gap-fill missing emissions data and to replace data that have been identified as implausible. The sectoral emissions are then distributed spatially using, where available (and appropriate), the reported national gridded emissions as relative spatial proxies, or other independent datasets of spatial proxies.
 
 Given the end of May deadline for compiling EMEP datasets, a cut-off date for incorporating reported emissions has to be set to allow necessary time for evaluating the reported emissions and implementing the gap-filling procedure. This year, the sectoral emissions data reported by 14 April 2021 were evaluated and considered for use in the compilation of the 2021 EMEP datasets of gridded emissions.
 
-The Parties, where data were (partly) replaced, corrected or gap-filled in 2021 are Albania, Armenia, Austria, Azerbaijan, Belarus, Bosnia and Herzegovina, Cyprus, Denmark, Georgia, Kazakhstan, Kyrgyzstan, Liechtenstein, Lithuania, Luxembourg,  Montenegro, the Republic of Moldova, Montenegro, the Russian Federation, Serbia, Turkey and the Ukraine. The results of the quality control and gap-filling procedures are described in detail in CEIP gap-filling report \citep{CEIP2021c}. % and in Appendix 2, a table is provided that documents for which EMEP countries and specific pollutants gap-filling/replacement was required and which methods were implemented. The reader is nonetheless reminded that this Table does not indicate if a subsequent adjustment of reported PM emissions for GNFR Sector C was undertaken to account for the potentially missing condensable component. This information is provided in Table 1.
+The Parties, where data were (partly) replaced, corrected or gap-filled in 2021 are Albania, Armenia, Austria, Azerbaijan, Belarus, Bosnia and Herzegovina, Cyprus, Denmark, Georgia, Kazakhstan, Kyrgyzstan, Liechtenstein, Lithuania, Luxembourg,  Montenegro, the Republic of Moldova, the Russian Federation, Serbia, Turkey and the Ukraine. The results of the quality control and gap-filling procedures are described in detail in CEIP gap-filling report \citep{CEIP2021c}. % and in Appendix 2, a table is provided that documents for which EMEP countries and specific pollutants gap-filling/replacement was required and which methods were implemented. The reader is nonetheless reminded that this Table does not indicate if a subsequent adjustment of reported PM emissions for GNFR Sector C was undertaken to account for the potentially missing condensable component. This information is provided in Table 1.
 
 Finally, it should be noted that the gap-filling and replacement procedure has been updated since 2020. The gap-filling/replacement of EMEP country emissions remains based on the independent estimates from the ECLIPSE v6b\footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}} dataset that has been compiled by IIASA using their GAINS model \citep{Amann_et_al:2011}. However, the emissions for areas North Africa, remaining Asian areas, the Aral Lake and the part of Russia within the EMEP domain for which Russia does not report emissions (referred to as 'Russian Federation Asian part' further in this chapter), are now based on the updated EDGAR v5.0\footnote{\url{https://edgar.jrc.ec.europa.eu/dataset_ap50}}  dataset \citep{EDGARv50} that was generated by the European Commission's Joint Research Centre (JRC). Previously, the emissions for these areas were based on a previous version (EDGAR v4.3.2) of the dataset \citep{EDGARv432}.
 
@@ -327,9 +327,9 @@ The following trend analyses are based on the emissions data in the EMEP dataset
 Excluding shipping emissions in the sea regions (these are summarised in the following subchapter), the trend analyses of total emissions from the non-sea areas in the EMEP domain\footnote{The EMEP domain covers the geographic area between 30{\degrees} N-82{\degrees} N latitude and 30{\degrees} 
   W-90{\degrees} E longitude.} show that emissions of seven of the nine pollutants have decreased overall since 2000 Figure~\ref{fig:CEIP8}). Only the 2019 PM$_{coarse}$  and \nhiii emissions have increased (by 6 and 12\%, respectively) since 2000. The 2019 emissions of \sox are 69\% of the respective 2000 emissions. While the 2019 emissions of CO, NMVOC, \nox, PM$_{2.5}$, PM$_{10}$ and BC are all lower than respective emissions in 2000 (1-10\% lower), it is interesting to note that emissions of these pollutants have been increasing since ca. 2014.
 
-Despite these overall trends, assessment shows that regional emission developments seem to follow strongly different patterns (Figure~\ref{fig:CEIP9}). While emissions of all of the pollutants in the EMEP West countries are clearly decreasing, emissions of all pollutants in the EMEP East countries of the EMEP domain have been somewhat stable (albeit gradually decreasing for most pollutants) over the 2000-2019 period. For the Other Land Areas (North Africa and the remaining Asian areas, emissions are clearly on the rise.
+Despite these overall trends, assessment shows that regional emission developments seem to follow strongly different patterns (Figure~\ref{fig:CEIP9}). While emissions of all the pollutants in the EMEP West countries are clearly decreasing, emissions of all pollutants in the EMEP East countries of the EMEP domain have been somewhat stable (albeit gradually decreasing for most pollutants) over the 2000-2019 period. For the Other Land Areas (North Africa and the remaining Asian areas, emissions are clearly on the rise.
 
-Of course it is not just the emission trends that separate the three land regions. Whereas the emission trends of the EMEP West countries are based to a very large extent on the official national inventories reported to CEIP, the countries within the Other Land Areas within the EMEP domain (North Africa, remaining Asian areas) are not Parties to the Convention and thus are not obliged to report their emissions. For these regions, emissions are based completely on the independent gridded emission estimates of the EDGAR v5.0 dataset \citep{EDGARv50} that was generated by the European Commission's Joint Research Centre (JRC). For the EMEP East region, again not all countries are Parties to the Convention (Turkmenistan, Tajikistan and Uzbekistan) and reported Russian emissions do not cover the region of Russia within the EMEP domain that is ca. east of the Urals. Emissions for the area of the Aral Lake are also not reported by any Convention country. Note that the emissions for the eastern part of Russia and the Aral Lake have also been gap-filled using the independent gridded emission estimates of the EDGAR v5.0 dataset. Finally, it should be noted that many of the emissions time series for the EMEP East countries that are Parties have been partially or fully replaced with independent estimates from the ECLIPSE v6b\footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}} dataset that has been compiled by IIASA using their GAINS model  \citep{Amann_et_al:2011}.
+Of course it is not just the emission trends that separate the three land regions. Whereas the emission trends of the EMEP West countries are based to a very large extent on the official national inventories reported to CEIP, the countries of the Other Land Areas within the EMEP domain (North Africa, remaining Asian areas) are not Parties to the Convention and thus are not obliged to report their emissions. For these regions, emissions are based completely on the independent gridded emission estimates of the EDGAR v5.0 dataset \citep{EDGARv50} that was generated by the European Commission's Joint Research Centre (JRC). For the EMEP East region, again not all countries are Parties to the Convention (Turkmenistan, Tajikistan and Uzbekistan) and reported Russian emissions do not cover the region of Russia within the EMEP domain that is ca. east of the Urals. Emissions for the area of the Aral Lake are also not reported by any Convention country. Note that the emissions for the eastern part of Russia and the Aral Lake have also been gap-filled using the independent gridded emission estimates of the EDGAR v5.0 dataset. Finally, it should be noted that many of the emissions time series for the EMEP East countries that are Parties have been partially or fully replaced with independent estimates from the ECLIPSE v6b\footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}} dataset that has been compiled by IIASA using their GAINS model  \citep{Amann_et_al:2011}.
 %An overview of the Parties and pollutants for which replacement and gap-filling was required is given in Appendix 2.
 
 
@@ -379,7 +379,7 @@ Due to the selective implementation of the Sulphur Emission Control Areas (SECAs
 
 \section{Summary}
 
-This chapter summarises the status of emissions reporting by LRTAP Convention Parties and the extent to which these data have been incorporated into the 2021 EMEP emissions datasets for modellers. The chapter documents the historical improvement in reporting over time, noting the increasing extent of reporting of emissions inventories for the mandatory pollutants and black carbon, as well as increased reporting of gridded emissions in 2021 compared to 2017. Despite these positive trends in terms of reporting, reporting is not yet complete. For some parties, emissions inventories and gridded data are not reported (or are reported late and/or incomplete). There is further room for improvement on the reporting of particulate matter emissions with respect to whether the condensable component has been included in the reported estimates.
+This chapter summarises the status of emissions reported by LRTAP Convention Parties and the extent to which these data have been incorporated into the 2021 EMEP emissions datasets for modellers. The chapter documents the historical improvement in reporting over time, noting the increasing extent of reporting emissions inventories for the mandatory pollutants and black carbon, as well as increased reporting of gridded emissions in 2021 compared to 2017. Despite these positive trends in terms of reporting, reporting is not yet complete. For some parties, emissions inventories and gridded data are not reported (or are reported late and/or incomplete). There is further room for improvement on the reporting of particulate matter emissions with respect to whether the condensable component has been included in the reported estimates.
 
 The 2021 EMEP emissions datasets for modellers therefore need to be complied carefully and this chapter documents for which countries and pollutants the time series have been based fully or partially on reported inventories and gridded data, and for which countries and regions the datasets have been built using independent emissions data products.
 
