--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -1,8 +1,6 @@
 \chapter[Status in 2019]{Status of transboundary air pollution in 2019}
 \label{ch:chapterStatus}
 
-\old{TODO}
-
 {\bf{Svetlana Tsyro, Wenche Aas, Sverre Solberg, Anna Benedictow and Hilde Fagerli}}
 \vspace{30pt}
 
@@ -50,9 +48,9 @@ As shown in Figure~\ref{fig:temp-avMET}~b) winter temperatures were higher than 
 \label{fig:prec-avMET}
 \end{figure}
 
-Particularly the dry conditions in east Europe and South Caucasus is shown in Figure~\ref{fig:prec-avMET}) of winter and summer precipitation in 2019 compared to the 2000-2018 average. But also local seasonal heavy precipitation events, resulting in above-normal averages as well for individual periods and countries. 
+%Particularly the dry conditions in east Europe and South Caucasus is evident from Figure~\ref{fig:prec-avMET} of winter and summer precipitation in 2019 compared to the 2000-2018 average. But also local seasonal heavy precipitation events, resulting in above-normal averages as well for individual periods and countries can be seen. 
 
-For April through September  Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of UK, Ireland, southern Norway and the central Mediterranean countries. In Latvia and Belarus, April was the driest month on record, and also European Russia, Germany, Czechia and northern parts of Poland was extremely dry. In spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported its wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Eastern Norway was extremely wet while western Norway was very dry. Denmark reported its wettest autumn on record and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
+For April through September (Figure~\ref{fig:prec-avMET}~a) ) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of UK, Ireland, southern Norway and the central Mediterranean countries. In Latvia and Belarus, April was the driest month on record, and also European Russia, Germany, Czechia and northern parts of Poland was extremely dry. In spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported its wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Eastern Norway was extremely wet while western Norway was very dry. Denmark reported its wettest autumn on record and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
 
 As shown in Figure~\ref{fig:prec-avMET}~b) the 2019 winter months (January-March and October-Decemb-er) precipitation were wetter than the 2000-2018 average in most of Europe, except drier conditions in western Norway, southern Iberian Peninsula, southeastern Europe, southern European Russia, South Caucasus, Kyrgyz Republic
 and Tajikistan. January was wetter than normal in central Europe, European Russia, Greece, Moldova and Spain. However in Spain it was the driest February in the twenty-first century, and also Germany, Belarus and Hungary received very little precipitation for this month. Spain, Portugal, Hungary, Romania, Ukraine and Moldova was also drier than normal in March, but northern European Russia broke records with wettest month. Turkey was wetter than normal in September, while Moldova was drier. For November the Alps recorded substantial snow amounts with new records in Switzerland, while it was still dry in Moldova. December was very wet in northern European Russia, Finland and southern Turkey, but abnormally dry in Macedonia and Bulgaria. For October, November and December, south Caucasus was extremely dry and in Georgia the snowcover for December was recordlow.
@@ -70,7 +68,7 @@ All the data are available from the EBAS database (\url{http://ebas.nilu.no/}) a
 \caption{\label{fig:EMEP-measurement-network}EMEP measurement network for level 1 components in 2019}
 \end{figure}
 
-120 sites reported measurements of inorganic ions in precipitation and/or main components in air. However, not all of these measurements were co-located, as illustrated in Figure~\ref{fig:EMEP-measurement-network}. There were 73 sites with measurements in both air and precipitation.  Ozone was measured at 138 EMEP sites.The number of sites is marginally lower than in 2018
+120 sites reported measurements of inorganic ions in precipitation and/or main components in air. However, not all of these measurements were co-located, as illustrated in Figure~\ref{fig:EMEP-measurement-network}. There were 73 sites with measurements in both air and precipitation.  Ozone was measured at 138 EMEP sites. The number of sites is marginally lower than in 2018.
 
 There were 78 sites measuring either PM$_{10}$ or PM$_{2.5}$ mass. 50 of these sites measured both size fractions, as recommended in the EMEP Monitoring strategy \citep{MonStrat2019}. The stations measuring EMEP level 2 variables are shown in Figure~\ref{fig:levell2-sites} in Chapter \ref{sec:Compliance-with-monitoring}, along with a discussion on compliance with the monitoring obligations and the development of the programme during the last decade.
 \section{Setup for EMEP MSC-W model runs}
@@ -84,8 +82,8 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
  Meteorology, emissions, boundary conditions and forest fires for 2019 have been
  used as input. Meteorological data have been
  derived from ECMWF-IFS(cy46r1) simulations (see Section~\ref{sec:meteo}). The
- land-based emissions have been derived from the 2020 official data
- submissions to UNECE CLRTAP \citep{CEIP2020}, as documented in
+ land-based emissions have been derived from the 2021 official data
+ submissions to UNECE CLRTAP \citep{CEIP2021}, as documented in
  Chapter \ref{ch:emis2019}. In the Base run for pollution assessments and the source-receptor runs included in this report, the officially submitted \PM[10] and \PM[2.5] emissions from residential combustion (GNFR sector C) were partly substituted by an emission data set provided by TNO for 2015 (the so-called \textit{REF2.1} scenario used in the Copernicus Atmosphere Monitoring Service contract CAMS50-II), see chapter \ref{sec:EmisSVOC} The data set by TNO represents the best-to-date available estimate of residential combustion emissions of PM, accounting for condensable organics in a consistent way. 
  
  Emissions from international shipping
@@ -113,7 +111,7 @@ runs. The horizontal resolution is \resZO, with 20 vertical layers
  %cannot accurately simulate their dispersion as their intrusion
  %occurred above the model's top layer.
 \section{Air pollution in 2019} 
-\subsection{Ozone - TO BE WRITTEN BY SVERRE}
+\subsection{Ozone}
 \label{O3MAX}
 
 The ozone observed at a surface station is the net result of various physio-chemical processes: surface dry deposition and uptake in vegetation, titration by nearby \nox emissions, regional photochemical ozone formation and atmospheric transport of background ozone levels, each of which may have seasonal and diurnal systematic variations. Episodes with elevated levels of ozone are observed during the summer half year when certain meteorological situations (dry, sunny, cyclonic stable weather) promote the formation of ozone over the European continent. 
@@ -216,7 +214,7 @@ underestimates the observed annual mean of \PM[10] by 17\% and
 \PM[2.5] by 16\%. \textcolor{blue}{CHECK with and Refer to AeroVal....A comprehensive model evaluation is provided in~\cite{WEB2020:PM}.}
 %From BIC rerun: biases -12 and -13\%, correlation 0.60 and 0.72 for \PM[10] and \PM[2.5]
 
-Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except from the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citep{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
+Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except from the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citet{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
 November being particularly extreme, both in terms of the total rainfall amounts and the number of days with heavy rainfall. As wet scavenging is the main PM removal mechanism, this, combined with the mild winter temperatures, resulted in the lower levels of PM pollution in winter 2019 over most of Europe.   
 
 \begin{figure}[H]
