--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -1,7 +1,7 @@
 \chapter[Trends]{Trends in observations and EMEP MSC-W model calculations 2000-2019}
 \label{ch:Trends}
 
-{\bf{Wenche Aas, Hilde Fagerli, Karl Espen Yttri, Svetlana Tsyro, Sverre Solberg, David Simpson, Jonas Gliss, Augustin Mortier, Eivind Grøtting Wærsted, Hans Brenna, Jan Griesfeller, Agnes Ny\'{\i}ri, Thomas Scheuschner}}\\
+{\bf{Wenche Aas, Hilde Fagerli, Karl Espen Yttri, Svetlana Tsyro, Sverre Solberg, David Simpson, Jonas Gliss, Augustin Mortier, Eivind Grøtting Wærsted, Hans Brenna, Anne Hjellbrekke, Jan Griesfeller, Agnes Ny\'{\i}ri, Thomas Scheuschner}}\\
 
 
 
@@ -10,6 +10,7 @@ At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body l
 list of questions was given to the subsidiary bodies of the Air Convention. Several of these questions were related to the trends of air pollution in Europe. 
 
 In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
+\QUERY{Sverre to say why we did not cover VOC}
 
 Unfortunately, the EMEP observational network is dominated by sites in western Europe and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in this chapter is only valid for a part of the EMEP domain. As discussed in chapter \ref{ch:emis2019}, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note however, that the uncertainties related to emissions and their trends in the eastern countries are large (see chapter \ref{ch:emis2019}).
 
@@ -243,7 +244,7 @@ The agreement between the trends calculated from observations and from the model
 
 
 
-The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (e.g. NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NOx) for the 2000-2019 period. Whilst the average trend in observations is -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.1 \% yr$^{-1}$ (total of -40\%), close to the trends in emissions from the western EMEP domain (-48\%). The difference between the trend in observations (and emissions?) are largest during the first period, similar to the results for NO$_2$. However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are then shifted downward and in very good agreement with observations for the years after. Note that the number of sites with significant trends for the shorter periods are small, and thus the results encumbered with more uncertainty.
+The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (e.g. NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NO$_x$) for the 2000-2019 period. Whilst the average trend in observations is -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.1 \% yr$^{-1}$ (total of -40\%), close to the trends in emissions from the western EMEP domain (-48\%). The difference between the trend in observations (and emissions?) are largest during the first period, similar to the results for NO$_2$. However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are then shifted downward and in very good agreement with observations for the years after. Note that the number of sites with significant trends for the shorter periods are small, and thus the results encumbered with more uncertainty.
 
 For particulate nitrate, nitric acid and their sum the results are more complex. The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered and the quality of the measurements is worse. 
 
@@ -387,25 +388,28 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 
 \section{\label{sec:Trends_reduced nitrogen }Trends in reduced nitrogen}
-Ammonia emissions from agricultural activities have been only slightly reduced for the western EMEP domain since 2000 (-12\% in EU27+UK+EFTA countries). In the EMEP domain as a whole, ammonia emissions have increased by 12\% since 2000 (see chapter XXX).
+Ammonia emissions from agricultural activities have been only slightly reduced for the western EMEP domain since 2000 (-12\% in EU27+UK+EFTA countries). In the EMEP domain as a whole, ammonia emissions have increased by 12\% since 2000 (see chapter \ref{ch:emis2019}).
 
 With such small changes in emissions, clearly it is very difficult to detect any trends in the observations - considering also that the meteorological variability introduces year to year changes of the same magnitude as the expected trends.
+Note that previous studies (e.g. \cite{torseth2012} and \cite{Theobald2019}) have found decreasing trends for reduced nitrogen. However, those studies analyzed earlier periods (e.g. 1980-2009 or 1990-2009), where the reported ammonia emissions decreased more.
 
-Figure~\ref{fig:Nred_trends} shows an overview of the annual and seasonal trends in reduced nitrogen compounds from 2000 to 2019. Tables~\ref{tab:tnh4_stat} to \ref{tab:nh4dep_stat} show absolute and relative changes in the different reduced nitrogen compounds.
+Figure~\ref{fig:Nred_trends} shows an overview of the annual and seasonal trends in reduced nitrogen compounds from 2000 to 2019. Figure~\ref{fig:RDNtrends} visualizes the trends in different reduced nitrogen compounds from observations on top of modelled trends on a European map. Tables~\ref{tab:tnh4_stat} to \ref{tab:nh4dep_stat} show absolute and relative changes in the different reduced nitrogen compounds.
 
 Indeed, both observations and model calculations find very few significant trends in wet deposition of reduced nitrogen. Out of 47 sites with long term measurements at EMEP background sites, only 14 (8) are significant for the observations (model). The average change in the observations for 2000 to 2019 is -0.14\% yr$^{-1}$, with a confidence interval from -0.1\% yr$^{-1}$ to +0.52\% yr$^{-1}$, while the model show an average trend of -0.4\% yr$^{-1}$ and a confidence interval of -0.7\% yr$^{-1}$ to -0.1\% yr$^{-1}$. For the shorter time periods (2000-2010 and 2010-2019) there are even fewer sites with significant trends (see Table~\ref{tab:nh4dep_stat}).
 
-Total ammonium (NH$_3$ + NH$_4$)) in air show a more negative trend in observations (and model calculations) of about -1.45\% yr$^{-1}$ (-1.33\% yr$^{-1}$) and with a larger fraction of the sites having significant trends. This trends is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% (25\%) in observations and model calculations for 2000-2019.
+Total ammonium (NH$_3$ + NH$_4$)) in air show a more negative trend in observations (model) of about -1.45\% yr$^{-1}$ (-1.33\% yr$^{-1}$) and with a larger fraction of the sites having significant trends. This trend is larger than the reduction in ammonia emissions for EU27+UK+EFTA countries (-12\%), in total 27\% (25\%) in observations (model calculations) for 2000-2019.
 
 The trend for ammonium aerosols is even more negative, -2.61 and -2.51 \% yr$^{-1}$ in observations and model calculations, respectively.
 
 Very few sites have long term time series of ammonia in air (8 sites), and very few of the trends calculated are significant. However, on average, the trends observed and calculated are positive: +1.55 and +1.28 \% yr$^{-1}$ in observations and model calculations, respectively, with all values within the confidence interval being positive.
 
-This large difference between the trends of the different reduced nitrogen components can be explained by the interaction of ammonia with the sulphur and nitrogen components. When ammonia is released into the air, it reacts with secondary sulphate originating from the SO$_x$ emissions and forms particulate ammonium sulphates. If more ammonia is available, it reacts with nitric acid in an equilibrium reaction to form particulate ammonium nitrate. During the years from 2000 onwards, large reductions in SO$_x$ and NO$_x$ emissions have taken place, and thus less sulphate and nitric acid is available for forming ammonium particles. Therefore, a smaller fraction of NH$_3$ is converted to aerosol ammonium, and the decrease in particulate ammonium is strongly linked to the decrease in sulphate and nitrate. It is therefore to be expected that the trend in ammonium aerosol (-2.6\% yr$^{-1}$, observations) lies somewhere between the trend in particulate sulphate (-3.21, observations) and nitrate -2.01\% yr$^{-1}$). 
+This large difference between the trends of the different reduced nitrogen components can be explained by the interaction of ammonia with the sulphur and nitrogen components. When ammonia is released into the air, it reacts with secondary sulphate originating from the SO$_x$ emissions and forms particulate ammonium sulphates. If more ammonia is available, it reacts with nitric acid in an equilibrium reaction to form particulate ammonium nitrate. During the years from 2000 onwards, large reductions in SO$_x$ and NO$_x$ emissions have taken place, and thus less sulphate and nitric acid is available for forming ammonium particles. Therefore, a smaller fraction of NH$_3$ is converted to aerosol ammonium, and the decrease in particulate ammonium is strongly linked to the decrease in sulphate and nitrate. It is therefore to be expected that the trend in ammonium aerosol (-2.6\% yr$^{-1}$, observations) lies somewhere between the trend in particulate sulphate (-3.21, observations) and nitrate (-2.01\% yr$^{-1}$, observations). 
 
 When less ammonia is converted to ammonium, the (very small) decrease in ammonia emissions is compensated by a larger part of ammonia residing in gas phase, and no decrease in ammonia (very few significant trends) are detected.
 
 For the sum of ammonia and ammonium, the two opposite trends of ammonia (no trend or slighly positive) and ammonium (negative) results in a negative trend that is smaller than the trend for ammonium alone.
+
+
 
 The analysis done for the shorter time periods (2000-2010 and 2010-2019) confirms the findings discussed above. It is worth to note that the agreement between the trends calculated from model calculations and the observation are excellent for the different reduced nitrogen components, which indicates that the EMEP MSC-W model does a very good job in reproducing the non-linear interactions between sulphur, oxidized nitrogen and reduced nitrogen and how it has evolved during the past 20 years.
 
@@ -601,7 +605,7 @@ Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed t
 The observations and model simulations indicate more sites with significant trends and larger \PM[10] and \PM[2.5] average decreases for the warm seasons. For the cold seasons, when PM pollution is typically more serious, the relative decreasing trends are in general smaller, and the number of sites with non-significant trends is larger, which is especially pronounced for observed \PM[10] trends.
 
 PM is a complex pollutant, consisting of aerosol species both emitted
-directly and formed from gaseous precursors. Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions are contribute to decrease PM concentrations. In the western parts of EMEP (EU \&UK \&EFTA), where the considered sites are located, the emissions of primary \PM[10] and \PM[2.5] were reduced by 32 and 35 \%, respectively, from 2000 to 2019. The largest in the same period was the reduction in \sox emissions (81 \%), resulting in 61 \% observed decrease of \soiv (70 \% according to the model). Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model). The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%. Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon have only been analysed for a 2010-2019 period (see discussion in \ref{sec:trendsECOC}). The chemical  
+directly and formed from gaseous precursors.Therefore, the reductions both in primary PM emissions, as well as \sox, \noii, \nhiii and NMVOC emissions are contribute to decrease PM concentrations. In the western parts of EMEP (EU \&UK \&EFTA), where the considered sites are located, the emissions of primary \PM[10] and \PM[2.5] were reduced by 32 and 35 \%, respectively, from 2000 to 2019. The largest in the same period was the reduction in \sox emissions (81 \%), resulting in 61 \% observed decrease of \soiv (70 \% according to the model). Though \noii was reduced by 48 \%, given the moderate reduction by 12 \% in \nhiii emissions and the availability of free \nhiii due to the reduced formation of ammonium sulphate, the observed decrease in \noiii concentrations was only 38 \% (44 \% by the model). The corresponding changes from 2000 to 2019 in \nhiv were 50 and 48 \%. Due to the lack of consistent observational data for carbonaceous aerosols in the 2000s, the trends of elemental (EC) and organic (OC) carbon have only been analysed for a 2010-2019 period (see discussion in \ref{sec:trendsECOC}). The chemical  
 
 Summarizing trend results for the 2000-2019 period, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing. Significant trends have been estimated from observational data for 78 \% of sites for \PM[10] and 84 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively. During this 20-year period, observed \PM[10] concentrations decreased by 35 \%  (36 \% from model simulations) on average at the considered sites. The average observed decrease of \PM[2.5] is 46 \%  (48 \% estimated by the model). We find quite a good correspondence between observed and model simulated trends in PM concentrations. 
 
@@ -624,8 +628,19 @@ Figure \ref{fig:O3_boxplot} indicates that the model overestimates the decrease 
 
 The annual O$_3$ percentile values for the observed and modelled data during 2000-2019 are shown in Figures \ref{fig:O3_perctrends_N} and \ref{fig:O3_perctrends_S} for stations north and south of 49 \degrees N. The solid lines mark the mean of all stations while the shaded areas mark the 25th and 75th percentile of these station-based values. These results show that the modelled 10th and 50th percentiles are higher than observed whereas the observed high percentiles (95-99) are higher than modelled. The bias in the high percentiles are particularly strong for stations south of 49 \degrees N. For the 75th percentile, the absolute levels of the modelled and observed data agree very well. It is furthermore seen that the interannual variation in the higher percentiles, i.e. the change in levels from year to year, is very well reproduced by the model but with a substantial offset. 
 
+Summary statistics for the observed and modelled trends during 2000-2019 for the 75th and 99th percentiles as well as SOMO35, AOT40 for crops and AOT40 for forests are given in Table~\ref{tab:O3_stat} for sites north and south of 49 \degrees N. These data show the mean trend (as absolute values and relative to 2000 in percent) as calculated by the Theil-Sen's slope. The slopes for the percentiles were calculated by the pyaerocom tool as explained above while the slopes for SOMO35 and AOT40 were calculated by the R libraries 'Kendall' and 'zyp'. 
+
+In addition to the mean trends, the confidence intervals for these mean values are also given. The confidence intervals were computed by standard bootstrapping techniques using the R library 'boot' (basic bootstrap method with 1000 resamples). Various bootstrap method were applied and compared to direct calculations of the confidence intervals based on the sample mean and sample standard deviation. These comparisons showed that the various methods produced very similar estimates of the confidence intervals for the mean values. These confidence intervals could be used to judge if the mean observed trends differ from the mean modelled trends.
+
+First of all, it is interesting to note that negative (downward) trends are found for all the five metrics both north and south of 49 \degrees N and for both observed and modelled data. This is a strong signal that there has been a real reduction in these ozone metrics during the 2000-2019 period. Furthermore, for sites north of 49 \degrees N, the results indicate that there are no significant difference between the observed and modelled trends in the 75th and 99th percentiles. For sites south of 49 \degrees N the mean absolute trends agree very well for the observed and modelled data, but the relative changes in the observations are clearly lower than the modelled changes (reflecting that the model underpredicts the absolute level of the high percentiles). It could be noted that the number of statistically significant trends are considerably lower for the observed data compared to the modelled ones. 
+
+For SOMO35 and AOT40 the number of sites with significant trends in the observations are rather low and substantially lower than the number of statistically significant modelled trends. For all three metrics the model calculates stronger mean reductions than observed. For SOMO35 north of 49 \degrees N, the mean observed and modelled absolute trends are very close, but the relative trend is larger for the modelled mean since the general modelled levels of SOMO35 are higher than observed.
+
+
+
+
 \begin{table}
-\caption{\label{tab:O3_stat} The estimated mean values of the absolute and relative trends in O$_3$ metrics based on stations north and south of 49 \degrees N (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided.} Results for the 75th and 99th percentile as well as teh SOMO35, EUAOT40 for crops
+\caption{\label{tab:O3_stat} The estimated mean values of the absolute and relative trends in O$_3$ metrics based on stations north and south of 49 \degrees N (observed and modelled). The corresponding 95\% confidence intervals of these mean values and the number of sites with significant trends are also provided.}. Results are given for for the 75th and 99th percentile as well as SOMO35, EU definition of AOT40 for crops (AOT40c), and EU definition for forests (AOT40f). Note that the number of sites 'obs' and 'mod' refer to the number of sites with significant slopes (p<0.05) whereas the man values include all sites irrespective of the significance.
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{lll|ccc|cccc|cccc}
@@ -692,71 +707,7 @@ Figures \ref{fig:O3_aot40croptrends} - \ref{fig:O3_somo35trends} show the statio
 	\caption{\label{fig:O3_somo35trends}Trends in SOMO35 from 2000-2019 for EMEP observations and model for sites north (left) and south (right) of 49 N: The solid line indicates the mean, and the shaded area marks the 25 and 75 percentile. Only sites below 1200 m asl and with at least 15 years of data are included.}
 \end{figure}
 
-\section{Exceedances of critical loads of acidification and eutrophication in 2000 to 2019.}
-\label{subs:exceedSnN}
-%Thomas/CCE: I just updated this section. Please have a look TS 17.08.2021
 
-The exceedances of European critical loads (CLs) are computed for the total nitrogen
-(N) and sulphur (S) depositions modelled on the 0.1$\degrees \times$ 0.1$\degrees$
-longitude-latitude grid (approx. 11 x 5.5 km$^{2}$ at 60$\degrees$N).
-Exceedances are calculated for the European critical loads documented in \cite{Hettelingh:2017}, while
-a description of the methods is given in \cite{DeVries:2015}. The
-critical loads data for eutrophication by N (CL eut N) and for acidification by N and S
-(CL acid) are also used by the EMEP Centre CIAM (located at IIASA) in their integrated assessment
-modelling. The exceedance in a grid cell is the so-called ’average accumulated
-exceedance’ (AAE), which is calculated as the area-weighted average of the
-exceedances of the critical loads of all ecosystems in this grid cell. The units for
-critical loads and their exceedances are equivalents (eq; same as \textit{moles of charge},
-molc) per area and time, making S and N depositions comparable on their impacts, which is important for
-acidity CLs.
-
-Critical loads are available for about 4 million ecosystems in Europe covering an area
-of about 3 million km$^{2}$ (west of 42$\degrees$E). The exceedances (AAE) of those critical loads
-are computed on a 0.1$\degrees \times$ 0.1$\degrees$ longitude-latitude grid, and maps for the deposition in
-the years 2000, 2005, 2010, 2015 and 2019 are shown in Figures \ref{fig:eutN} and \ref{fig:acid}. As indicated in the maps, the critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019.
-European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
-ha$^{-1}$ yr$^{-1}$ (2019). The highest exceedances of CLs are found in the Po Valley in Italy, the
-Dutch-German-Danish border areas and in north-eastern Spain.
-By contrast, critical loads of acidity are exceeded in a much smaller area. Hot spots of
-exceedances can be found in the Netherlands and its border areas to Germany and
-Belgium, and some smaller maxima in southern Germany and Czechia,
-whereas most of Europe is not exceeded (grey areas). Acidity exceedances occur
-on 16.2\% (2000) and 5.0\% (2019) of the ecosystem area and the European average
-AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (2019). Overall statistics for the share of critical load exceedance and European average of AAE are shown in Figures \ref{fig:stats_cl_ex}.
-\begin{figure}[ht]
-  \centering
-  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_eut.png}}
-  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_acid.png}}
-  \caption{Summary for exceedance of critical load for eutrophication (left) and acidification (right).}
-\label{fig:stats_cl_ex}
-\end{figure}
-\begin{figure}[ht]
-  \centering
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2000.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2005.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2010.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2015.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2019.png}}
- \caption{Exceedance of critical load for eutrophication for the years 2000, 2005, 2010, 2015 and 2019.}
-\label{fig:eutN}
-\end{figure}
-\begin{figure}[ht]
-  \centering
- \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2000.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2005.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2010.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2015.png}}
-  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2019.png}}
- \caption{Exceedance of critical load for acidification for the years 2000, 2005, 2010, 2015 and 2019.}
-\label{fig:acid}
-\end{figure}
-
-
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\clearpage
 
 \section{Trends in Elemental and Organic Carbon}
 \label{sec:trendsECOC}
@@ -790,7 +741,7 @@ Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in EC  over the
 These points about model-measurement comparison for EC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
 \begin{table}
- \caption{Absolute change ( \ugC/yr) and relative change (\%/yr) and
+ \caption{Absolute change (\ugC/yr) and relative change (\%/yr) and
   corresponding confidence intervals in observed and modelled annual
   and seasonal aggregated EC concentrations at 15 sites across Europe
   for 2010--2019. The number of sites with a significant outcome is
@@ -801,16 +752,16 @@ These points about model-measurement comparison for EC are discussed further in 
 \begin{tabular}{llcc|cccc|cccc}
 \toprule
 %\hline
-               \multicolumn{4}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
- Season &           total & sign. & sign. &                   obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
-       &                  & (obs.)    & (mod.)     &   &  &  & & & & & \\
+               \multicolumn{4}{c}{Number of sites} & \multicolumn{4}{c}{Average Change (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change (\% $yr^{-1}$)} \\
+ Season &           Total & Sign. & Sign. &                   obs. &          Conf.interval &  Mod. &          Conf.interval &                     Obs. &         Conf.interval &  Mod. &        Conf.interval \\
+       &                  & (Obs.)    & (Mod.)     &   &  &  & & & & & \\
 \midrule
 %\hline
-all    &              15 &         11 &          12 &                  -0.019 &  (-0.031, -0.008) & -0.014 &  (-0.021, -0.007) &                    -4.49 &  (-5.25, -3.73) & -3.81 &  (-4.59, -3.03) \\
-winter &              15 &          6 &           4 &                  -0.029 &  (-0.053, -0.006) & -0.019 &  (-0.032, -0.006) &                    -4.27 &  (-5.49, -3.06) & -3.10 &  (-4.21, -1.98) \\
-spring &              15 &          5 &           8 &                  -0.012 &  (-0.018, -0.006) & -0.013 &  (-0.018, -0.009) &                    -3.88 &  (-4.67, -3.09) & -3.86 &   (-4.92, -2.8) \\
-summer &              15 &          8 &          10 &                  -0.011 &  (-0.015, -0.007) & -0.008 &  (-0.013, -0.004) &                    -4.73 &  (-5.71, -3.74) & -3.71 &  (-4.59,  -2.82) \\
-autumn &              15 &          8 &          11 &                  -0.023 &   (-0.036, -0.01) & -0.018 &  (-0.027, -0.009) &                    -4.96 &   (-6.03, -3.9) & -4.25 &  (-5.15,  -3.35) \\
+All    &              15 &         11 &          12 &                  -0.019 &  (-0.031, -0.008) & -0.014 &  (-0.021, -0.007) &                    -4.49 &  (-5.25, -3.73) & -3.81 &  (-4.59, -3.03) \\
+Winter &              15 &          6 &           4 &                  -0.029 &  (-0.053, -0.006) & -0.019 &  (-0.032, -0.006) &                    -4.27 &  (-5.49, -3.06) & -3.10 &  (-4.21, -1.98) \\
+Spring &              15 &          5 &           8 &                  -0.012 &  (-0.018, -0.006) & -0.013 &  (-0.018, -0.009) &                    -3.88 &  (-4.67, -3.09) & -3.86 &   (-4.92, -2.8) \\
+Summer &              15 &          8 &          10 &                  -0.011 &  (-0.015, -0.007) & -0.008 &  (-0.013, -0.004) &                    -4.73 &  (-5.71, -3.74) & -3.71 &  (-4.59,  -2.82) \\
+Autumn &              15 &          8 &          11 &                  -0.023 &   (-0.036, -0.01) & -0.018 &  (-0.027, -0.009) &                    -4.96 &   (-6.03, -3.9) & -4.25 &  (-5.15,  -3.35) \\
 \bottomrule
 \end{tabular}
 } % end scalebox
@@ -1026,7 +977,7 @@ The issues with condensable organics (Sect.~\ref{ss:IssuesECOC}) impact these es
 
 We can note that \citet{Yttri2021} also found a statistically significant downward trend of similar magnitude
 (-4.2\%/yr)  for EC for 2010--2019 as for 2001--2018
-for the Norwegian Birkenes Observatory \citep{Yttri2021}. This suggests a large-scale reduction in EC emissions.
+for the Norwegian Birkenes Observatory. This suggests a large-scale reduction in EC emissions.
 
 \SKIP{Influenced by
 major anthropogenic emission regions in Europe, this finding indicates a
@@ -1130,7 +1081,7 @@ of this increasing trend is due to an increase in natural sources and
 not exclusively from a decrease in anthropogenic emissions. A 2.8\%/yr
 increase in the OC fraction was observed for the Spanish site Montseny,
 resembling the Norwegian sites with respect to a low aerosol level and
-a high OC fraction from natural sources \citep{Kulmala2011}. For the
+a high OC fraction from natural sources \citep{Kulmala2011,Crippa2014}. For the
 rest of continental Europe, a minor $\pm$1\%/yr increase/decrease
 was seen at most sites and a $\pm$2\%/yr for a few. The Kosetice
 (Czech Republic) (-5.3\%/yr) and Shauinsland (Germany) (-3.1\%/yr) sites
@@ -1263,6 +1214,73 @@ fraction to get a quantitative overview of the abatable fractions.
 
 
 \clearpage
+\section{Exceedances of critical loads of acidification and eutrophication in 2000 to 2019.}
+\label{subs:exceedSnN}
+%Thomas/CCE: I just updated this section. Please have a look TS 17.08.2021
+
+The exceedances of European critical loads (CLs) are computed for the total nitrogen
+(N) and sulphur (S) depositions modelled on the 0.1$\degrees \times$ 0.1$\degrees$
+longitude-latitude grid (approx. 11 x 5.5 km$^{2}$ at 60$\degrees$N).
+Exceedances are calculated for the European critical loads documented in \cite{Hettelingh:2017}, while
+a description of the methods is given in \cite{DeVries:2015}. The
+critical loads data for eutrophication by N (CL eut N) and for acidification by N and S
+(CL acid) are also used by the EMEP Centre CIAM (located at IIASA) in their integrated assessment
+modelling. The exceedance in a grid cell is the so-called ’average accumulated
+exceedance’ (AAE), which is calculated as the area-weighted average of the
+exceedances of the critical loads of all ecosystems in this grid cell. The units for
+critical loads and their exceedances are equivalents (eq; same as \textit{moles of charge},
+molc) per area and time, making S and N depositions comparable on their impacts, which is important for
+acidity CLs.
+
+Critical loads are available for about 4 million ecosystems in Europe covering an area
+of about 3 million km$^{2}$ (west of 42$\degrees$E). The exceedances (AAE) of those critical loads
+are computed on a 0.1$\degrees \times$ 0.1$\degrees$ longitude-latitude grid, and maps for the deposition in
+the years 2000, 2005, 2010, 2015 and 2019 are shown in Figures \ref{fig:eutN} and \ref{fig:acid}. As indicated in the maps, the critical loads for eutrophication are exceeded in practically all countries in all years. The share of ecosystems where the critical load for eutrophication is exceeded decreases relatively slowly, starting at 76.4\% in 2000 and ending at 65.5\% in 2019.
+European average AAE is about 452 eq ha$^{-1}$ yr$^{-1}$ (2000) and 276 eq
+ha$^{-1}$ yr$^{-1}$ (2019). The highest exceedances of CLs are found in the Po Valley in Italy, the
+Dutch-German-Danish border areas and in north-eastern Spain.
+By contrast, critical loads of acidity are exceeded in a much smaller area. Hot spots of
+exceedances can be found in the Netherlands and its border areas to Germany and
+Belgium, and some smaller maxima in southern Germany and Czechia,
+whereas most of Europe is not exceeded (grey areas). Acidity exceedances occur
+on 16.2\% (2000) and 5.0\% (2019) of the ecosystem area and the European average
+AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (2019). Overall statistics for the share of critical load exceedance and European average of AAE are shown in Figures \ref{fig:stats_cl_ex}.
+\begin{figure}[ht]
+  \centering
+  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_eut.png}}
+  \subfigure{\includegraphics*[scale=0.20]{FIGS_CL_Exceedance/Stats_CLex_acid.png}}
+  \caption{Summary for exceedance of critical load for eutrophication (left) and acidification (right).}
+\label{fig:stats_cl_ex}
+\end{figure}
+\begin{figure}[ht]
+  \centering
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2000.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2005.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2010.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2015.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_eut_2019.png}}
+ \caption{Exceedance of critical load for eutrophication for the years 2000, 2005, 2010, 2015 and 2019.}
+\label{fig:eutN}
+\end{figure}
+\begin{figure}[ht]
+  \centering
+ \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2000.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2005.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2010.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2015.png}}
+  \subfigure{\includegraphics*[scale=0.35]{FIGS_CL_Exceedance/CL_Ex_acid_2019.png}}
+ \caption{Exceedance of critical load for acidification for the years 2000, 2005, 2010, 2015 and 2019.}
+\label{fig:acid}
+\end{figure}
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\clearpage
+
+
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
