--- a/report.tex
+++ b/report.tex
@@ -335,7 +335,7 @@
 
 %\includeonly{acknow}
 %\includeonly{chapterEmis2019,chapterTrendsSandN,chapterEMEPModelUpdates}
-
+%\includeonly{chapterMeasurementDevelopments}
 
 %Please:if you use includeonly on overleaf, just do it temporary and set it back after you have compiled (since others will only see 'your chapter')
 
@@ -374,7 +374,7 @@
 
 \part{Technical EMEP Developments}
 \include{chapterEMEPModelUpdates}
-%\include{chapterMeasurementDevelopments}
+\include{chapterMeasurementDevelopments}
 
 \part{Appendices}
 \setcounter{part}{1}
